fix action item menu overflowing the viewport
UDS-1674

--- a/@utahdts/utah-design-system-header/src/css/_action-items.scss
+++ b/@utahdts/utah-design-system-header/src/css/_action-items.scss
@@ -8,7 +8,6 @@
     &-header-action-item {
       display: flex;
       align-items: center;
-      position: relative;
       &__icon-button {
         &.icon-button {
           border: 2px solid transparent;
